--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Test d'intégration",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node server.tsx",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "nodemon --watch src --ext ts,tsx --exec ts-node server.tsx",
+    "build:watch": "tsc --watch"
   },
+
+
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.4",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
     "swagger-jsdoc": "^6.2.8",
@@ -17,6 +22,7 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "@types/swagger-jsdoc": "^6.0.4",
