--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "Test d'intégration",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node server.tsx",
     "build": "tsc",
     "dev": "nodemon --watch src --ext ts,tsx --exec ts-node server.tsx",
     "build:watch": "tsc --watch"
   },
-
-
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,11 +17,14 @@
     "mongoose": "^8.4.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/node": "^20.12.12",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
