work in progress

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-RABBITMQ_HOST=localhost
-RABBITMQ_PORT=5672
-RABBITMQ_USERNAME=gleen
-RABBITMQ_PASSWORD=darsycam
+MONGODB_URI = 
+RABBITMQ_HOST = 88.125.155.66
+RABBITMQ_PORT = 32774
+RABBITMQ_USERNAME = mspr
+RABBITMQ_PASSWORD = pEdXX58JHFUCmxv
