Updated CI/CD configuration and Postman collection

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Run Newman tests
         run: |
           npm install -g newman
-          newman run ./__tests__/postman/api-products.postman_collection.json
+          newman run tests/postman/api-products.postman_collection.json
