Updated CI/CD configuration and Postman collection

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+
       - name: Run Newman tests
         run: |
           npm install -g newman
-          newman run tests/postman/api-products.postman_collection.json
+          newman run ./__tests__/postman/api-products.postman_collection.json
