--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "har-validator": "^5.1.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "prom-client": "^15.1.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
+    "uuid": "^10.0.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
