--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "ts-node server.tsx",
     "build": "tsc",
     "dev": "nodemon --watch src --ext ts,tsx --exec ts-node server.tsx",
-    "build:watch": "tsc --watch"
+    "build:watch": "tsc --watch",
+    "test": "jest --config jest.config.js",
+    "test-ci": "newman run ./postman/api-products.postman_collection.json -r junitfull --reporter-junitfull-export './reports/junit/api-test-results.xml'"
   },
   "author": "",
   "license": "ISC",
@@ -16,14 +18,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "har-validator": "^5.1.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "prom-client": "^15.1.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
-    "uuid": "^10.0.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
